# wstools

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  TODO  configure  configure.in
autom4te.cache/: output.1  traces.0  traces.1
doc/: PROTOCOL  Sääasema-dokumentaatio.txt  laskukaavat.ods
scripts/: hourgraph.plot  index.html  mk.sh  proctest.sh  style.css  test.sh  updater.sh  updateweatherpage.sh
scripts/loadtest/: loadtest  log  testload
scripts/plot/: 2008-09-26.txt  avg.data  avgdata.tmp  hourgraph.plot  ser.pl  weather.pl  xrange.plot
src/: .#network.c.1.3  .exrc  2008-09-26.txt  Makefile  Makefile.am  Makefile.in  avgdata.c  cmdline.h  common.h  conftool.c  datautils.c  datautils.h  error.c  error.h  fileread.c  genlist.c  genlist.h  network.c  network.h  options.c  options.h  proto.h  server.c  wsclient.c
src/.deps/: avgdata.Po  datautils.Po  network.Po  options.Po  wsclient.Po
